--- a/src/main/webapp/livros.xhtml
+++ b/src/main/webapp/livros.xhtml
@@ -8,19 +8,32 @@
         <title>Livros</title>
     </h:head>
     <h:body>
-        <h:form id="form-livros">             
-            
-            <p:outputLabel value="Nome" for="nome"/>
-            <p:inputText value="#{livroBean.livro.nome}" id="nome"/><br/>
-            <p:message for="nome"/>
-            <p:outputLabel value="Descrição" for="descricao"/>
-            <p:inputText value="#{livroBean.livro.descricao}" id="descricao"/><br/>                
-            <p:message for="descricao"/>
-
-            <p:selectManyMenu value="#{livroBean.autoresId}">
-                <f:selectItems value="#{livroBean.listarAutores()}" var="autor" 
-                               itemLabel="#{autor.nome}" itemValue="#{autor.id}"/>
-            </p:selectManyMenu>
+        <h:form id="form-livros"> 
+            <h:inputHidden value="#{livroBean.livro.id}"/> 
+            <div>
+                <p:outputLabel value="Nome" for="nome"/>
+                <p:inputText value="#{livroBean.livro.nome}" id="nome"/><br/>
+                <p:message for="nome"/>
+            </div>
+            <div>
+                <p:outputLabel value="Descrição" for="descricao"/>
+                <p:inputText value="#{livroBean.livro.descricao}" id="descricao"/><br/>                
+                <p:message for="descricao"/>
+            </div>
+            <div>
+                <p:outputLabel value="Data de publicação" for="dataPublicacao"/>
+                <p:inputMask mask="99/99/9999" value="#{livroBean.livro.dataPublicacao.time}" id="dataPublicacao" rendered="true" requiredMessage="Campo requerido" converterMessage="Erro na conversão">
+                    <f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Recife"/>
+                </p:inputMask>
+            </div>
+            <div>
+                <p:outputLabel value="Autores" for="autores"/>
+                <p:selectManyMenu value="#{livroBean.livro.autores}" converter="conversorAutor" id="autores">
+                    <f:selectItems value="#{livroBean.listarAutores()}" var="autor" 
+                                   itemLabel="#{autor.nome}" itemValue="#{autor}"/>
+                </p:selectManyMenu>
+                <p:message for="autores"/>
+            </div>
             <p:commandButton value="Cadastrar" action="#{livroBean.salvar()}" 
                              update="form-livros"/>
         </h:form>
