--- a/src/main/webapp/lista-livros.xhtml
+++ b/src/main/webapp/lista-livros.xhtml
@@ -3,13 +3,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Lista livros</title>
-        <h:outputStylesheet library="css" name="estilo.css"/>
+        <h:outputStylesheet library="css" name="estilo.css" />   
         <h:outputStylesheet library="css" name="bootstrap.min.css" />        
     </h:head>
-    <h:body>        
+    <h:body>       
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="#">Sistema de livros</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <h:link  styleClass="nav-link" value="Formulário" outcome="livros"/>
+                    </li>
+                    <li class="nav-item active">
+                        <h:link  styleClass="nav-link" value="Listagem" outcome="lista-livros"/>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        
         <div class="container">
             <h1><p:outputLabel value="Lista de livros"/></h1>
             <p:messages/>
@@ -28,10 +47,8 @@
                 <p:column headerText="Ações">
                     <h:form>
                         <p:commandLink value="Excluir" action="#{listaLivroBean.excluir(livro)}" update="tabela"/>
-                    </h:form>              
-                    <h:form>
-                        <p:commandLink value="Editar" action="#{livroBean.editar(livro)}"/>
-                    </h:form>  
+                    </h:form>                                  
+                    <a href="#{request.contextPath}/livros.xhtml?id=#{livro.id}">Editar</a>                    
                 </p:column>
             </p:dataTable>
             <br/>
